fix gap mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,11 +607,13 @@ section {
 /*==================== PORTFOLIO ====================*/
 .portfolio__title {
     font-family: "SF Mono Heavy";
+    margin-bottom: var(--mb-6); 
 }
 
 .portfolio__image {
     width: 55vw;
     position: relative;
+    margin-bottom: 10rem; 
 
 }
 
@@ -619,7 +621,7 @@ section {
     display:flex;
     flex-direction: column;
     align-items: center;
-    grid-gap: 10rem; 
+    
 }
 
 
